tests/netedit/basic/configs/netecfg/load/invalid/all/errors.netedit
Error: File '/home/palcraft/.texttest/tmp/netedit.daily.basic.19Dec113136.2377/netedit.daily.basic/basic/configs/netecfg/load/invalid/all/dummy.net.xml' is not accessible (No such file or directory).
Error: No nodes loaded.
Error: Failed to build network.
TestFunctions: Killed Netedit process. 'reference.png' not found
